fix: fix font color of category in dark mode

--- a/src/picker/components/Picker/Picker.scss
+++ b/src/picker/components/Picker/Picker.scss
@@ -71,6 +71,7 @@ $skintoneZIndex3: 3;
 .category {
   padding: var(--emoji-padding);
   font-size: var(--category-font-size);
+  color: var(--category-font-color);
 }
 
 //
